tests/parser/good/loopstmt.gbl
fn f() {
	loop {
		var a = 1;
		break;
	}
	loop {
		loop {
			break;
		}
	}
}
