tests/parser/errors/funcdec_arg_no_comma.gbl
fn foo(a: int b: int) { }
